--- a/Sama/src/html/details.html
+++ b/Sama/src/html/details.html
@@ -2,56 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>TRAMIER特雷米 特级初榨橄榄油5L .-山姆会员店，正品有保障</title>
 	<link rel="stylesheet" href="../css/details.css">
 	<link rel="stylesheet" href="../font/font_62/iconfont.css">
 </head>
 <body>
-		<div class="hide_nav">
-			<div class="hide_center">
-				<div class="hide_center_box clear">
-					<div class="hide_fixed_logo">
-						<a href="javascript:;">
-							<img src="//image.samsclub-estore.com/front-homepage/samglobal/images/global/fixedlogo.png" alt="" style="width: 96px;height: 27px;">
-						</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">夏日换新</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">生鲜食品</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">粮油干活</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">零食牛奶</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">酒水饮料</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">宝宝中心</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">个护美妆</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">智能家电</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">手机数码</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">家居清洁</a>
-					</div>
-					<div class="li">
-						<a href="javascript:;">床品箱包</a>
-					</div>
-					
-				</div>
-			</div>
-	</div><!-- 隐藏导航条 -->
 	<div class="header"><!-- 头部 -->
 		<div class="header_top">
 			<div class="global_center"><!-- 居中盒子 -->
@@ -402,5 +357,32 @@
 			</div>
 		</div>
 	</div><!-- 头部 -->
+	<div class="details_content_center">
+		<div class="details_top">
+			<ul class="clear">
+				<li>首页></li>
+				<li>食品></li>
+				<li>粮油></li>
+				<li>食用油></li>
+				<li>橄榄油></li>
+				<li>TRAMIER特雷米 ></li>
+				<li><a class="okcl" href="javascript:;" target="_blank">TRAMIER特雷米 特级初榨橄榄油5L .</a></li>
+			</ul>
+		</div>
+		<div class="details_mid clear">
+			<div class="datails_left">
+				<ul>
+					<li class="left_pic"><img src="//d8.samsclub-estore.com/N08/M04/4A/83/ChEi1Fk6DQGACDHMAAItyYcLpFg94700_65x65.webp" alt=""></li>
+					<li class="left_pic"><img src="//d9.samsclub-estore.com/N11/M09/EF/5F/ChEwoVk6DRyAY1HZAAKb6XZrGmE16500_65x65.webp" alt=""></li>
+					<li class="left_pic"><img src="//d8.samsclub-estore.com/N10/M07/4C/CC/ChEi21k6DQ6ACVyTAAM-c5ouZ7Y59400_65x65.webp" alt=""></li>
+					<li class="left_pic"><img src="//d8.samsclub-estore.com/N10/M06/4C/CC/ChEi21k6DQaAK-dSAAGZi_wj8Zw21900_65x65.webp" alt=""></li>
+					<li class="left_pic"><img src="//d7.samsclub-estore.com/N09/M06/29/2D/ChEi11k6DQ-AQEgyAAKI5ErMlfA64200_65x65.webp" alt=""></li>
+				</ul>
+			</div>
+			<div class="datails_spic">
+				
+			</div>
+		</div>
+	</div>
 </body>
 </html>
