--- a/Sama/src/html/details.html
+++ b/Sama/src/html/details.html
@@ -372,17 +372,69 @@
 		<div class="details_mid clear">
 			<div class="datails_left">
 				<ul>
-					<li class="left_pic"><img src="//d8.samsclub-estore.com/N08/M04/4A/83/ChEi1Fk6DQGACDHMAAItyYcLpFg94700_65x65.webp" alt=""></li>
-					<li class="left_pic"><img src="//d9.samsclub-estore.com/N11/M09/EF/5F/ChEwoVk6DRyAY1HZAAKb6XZrGmE16500_65x65.webp" alt=""></li>
-					<li class="left_pic"><img src="//d8.samsclub-estore.com/N10/M07/4C/CC/ChEi21k6DQ6ACVyTAAM-c5ouZ7Y59400_65x65.webp" alt=""></li>
-					<li class="left_pic"><img src="//d8.samsclub-estore.com/N10/M06/4C/CC/ChEi21k6DQaAK-dSAAGZi_wj8Zw21900_65x65.webp" alt=""></li>
-					<li class="left_pic"><img src="//d7.samsclub-estore.com/N09/M06/29/2D/ChEi11k6DQ-AQEgyAAKI5ErMlfA64200_65x65.webp" alt=""></li>
+					<li class="left_pic" style="border: 1px solid #2b68a5"><img class="smallpic" src="" alt=""></li>
+					<li class="left_pic"><img class="smallpic" src="" alt=""></li>
+					<li class="left_pic"><img class="smallpic" src="" alt=""></li>
+					<li class="left_pic"><img class="smallpic" src="" alt=""></li>
+					<li class="left_pic"><img class="smallpic" src="" alt=""></li>
+					<li class="left_pic"><img class="smallpic" src="" alt=""></li>
 				</ul>
 			</div>
-			<div class="datails_spic">
-				
+			<div class="datails_spic" style="margin-left: 20px;">
+				 <img class="midpic" src="//d8.samsclub-estore.com/N08/M04/4A/83/ChEi1Fk6DQGACDHMAAItyYcLpFg94700_800x800.webp" alt=""><!-- 小图 -->
+				 <div class="small_glass"></div> <!-- 小放大境 -->			
 			</div>
+			<div id="bpic">
+				<img class="bigpic" src="" alt=""><!-- 大图 -->
+			</div>
+
+
+
+				<div class="datails_right" style="margin-left: 20px;">
+					<p class="title_1">
+					<span class="jsd"></span>
+					TRAMIER特雷米 特技初榨橄榄油5L.
+					</p>
+					<p class="title_2">西班牙原装进口 品质保证 精选原料 严格工艺</p>
+					<div class="price_weight clear">
+						<div class="price">
+							<em>￥</em>
+							<strong>
+								259
+							</strong>
+							<span>
+								降价通知
+							</span>
+						</div>
+						<div class="weight">
+							<span>重量：5.1kg</span>
+
+						</div>
+					</div>
+					<div class="haoping">
+						<img src="../img/huaban.png" alt="">
+					</div>
+					<div class="addshopping clear">
+						<div class="jiajian">
+							<span id="num_jian">
+								-
+							</span>
+							<input type="text" id="numm" value="1">
+							<span id="num_jia">+</span>
+
+						</div>
+						<div class="gouwuche">
+							<a href="javascript:;">
+								<img src="../img/huaban_04.png" alt="">
+							</a>
+						</div>
+					</div>
+				</div>
+
 		</div>
 	</div>
+	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="../script/js/indexdata.js"></script>
+	<script src="../script/js/datails.js"></script>
 </body>
 </html>
