--- a/Sama/src/html/index1.html
+++ b/Sama/src/html/index1.html
@@ -404,40 +404,57 @@
 	</div><!-- 头部 -->
 	<div class="banner"><!-- 轮播图 -->
 		<ul class="banner_pic">
-			<li>
-				<a class="lunbopic" href="javascript:;">
+			<li style="opacity: 1">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 			<li>
-				<a class="lunbopic" href="javascript:;">
-				</a>
-			</li>
-			<li>
-				<a  class="lunbopic" href="javascript:;">
+				<a class="lunbopic" href="javascript:;"><img class="mmmg" src="" alt="">
 				</a>
 			</li>
 		</ul>
 		<ul class="banner_trig">
+		<li style="background-color: #1D7CEA">
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
+		<li>
+			<a class="btnggg" href=""></a>
+		</li>
 		</ul>
 	</div><!-- 轮播 -->
 	<div class="main">
