--- a/Sama/src/html/registo.html
+++ b/Sama/src/html/registo.html
@@ -40,35 +40,30 @@
 	</div>
 	<!-- 以上是会员卡盒子 -->
 	<div class="from_box">
-		<div class="ipt _username">
-			<input class="ipt_from_1" type="text" placeholder="用户名" name="username">
+	<form action="../../php/reg.php" method="post">
+		<div class="ipt _username"><!-- 用户名 -->
+			<input class="ipt_from_1" id="username" type="text" placeholder="用户名" name="username">
 			<p class="prompt_text_default">4-20位字符，可由中文、英文、数字</p>
-			<!-- 默认提示 -->
-			<p class="prompt_text_wrong">请输入正确的用户名！/请输入用户名！</p>
 			<!-- 错误提示 -->
 		</div>
-		<div class="ipt _email">
-			<input class="ipt_from_1" type="text" placeholder="邮箱地址" name="email">
+		<div class="ipt _email"><!-- 邮箱 -->
+			<input class="ipt_from_1" id="email" type="text" placeholder="邮箱地址" name="email">
 			<p class="prompt_text_default">请输出常用邮箱，可用作登陆账户，接受订单通知和找回密码之用</p>
-			<!-- 默认提示 -->
-			<p class="prompt_text_wrong">请输入正确的邮箱地址！/请输入邮箱地址！</p>
 			<!-- 错误提示 -->
 		</div>
-		<div class="ipt _password">
-			<input class="ipt_from_1" type="password" placeholder="密码" name="password">
+		<div class="ipt _password"><!-- 密码 -->
+			<input class="ipt_from_1" id="password" type="password" placeholder="密码" name="password">
 			<p class="prompt_text_default">6-20位字符，可由大小写英文、数字或符号“-”“_”组成</p>
-			<!-- 默认提示 -->
-			<p class="prompt_text_wrong">密码要求为6-20位字符！/请输入密码！</p>
 			<!-- 错误提示 -->
 		</div>
-		<div class="ipt _repassword">
-			<input class="ipt_from_1" type="password" placeholder="确认密码" name="repassword">
-			<p class="prompt_text_wrong"></p>
+		<div class="ipt _repassword"><!-- 密码重复 -->
+			<input class="ipt_from_1" id="repassword" type="password" placeholder="确认密码" name="repassword">
+			<p class="prompt_text_default"></p>
 			<!-- 错误提示 -->
 		</div>
-		<div class="ipt _iphone_number">
-			<input class="ipt_from_1" type="text" placeholder="您的手机号" name="iphone_number">
-			<p class="prompt_text_wrong"></p>
+		<div class="ipt _iphone_number"><!-- 手机号 -->
+			<input class="ipt_from_1"  id="phonenum" type="text" placeholder="您的手机号" name="iphone_number">
+			<p class="prompt_text_default"></p>
 			<!-- 错误提示 -->
 		</div>
 		<div class="ipt_checkbox_1">
@@ -83,8 +78,11 @@
 			</label>
 		</div>
 		<div class="btn_box">
-			<a href="javascript:;" class="blue_link" target="_blank">提交</a>
+			<input type="submit" id="submit" value="提交" name="submit">
 		</div>
+		</form>
 	</div>
+	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="../script/js/registo.js"></script>
 </body>
 </html>
